# rub

./: LICENSE  README.md
book/: Cargo.toml
book/src/ch4/1_ownership/: main.rs
book/src/ch4/2_references_and_borrowing/: main.rs
book/src/ch4/3_slice_type/: main.rs
book/src/ch5/1_structs/: main.rs
book/src/ch5/2_structs_example/: main.rs
book/src/ch5/3_method_syntax/: main.rs
book/src/ch6/1_enums/: main.rs
book/src/ch6/2_match/: main.rs
book/src/ch6/3_if_let/: main.rs
book/src/ch7/: README.md
book/src/ch7/restaurant/src/: lib.rs
ch3/: Cargo.toml
ch3/src/3_functions/: main.rs
ch3/src/5_if_and_loops/: main.rs
ch3/src/exercise/: main.rs
projects/guess_game/src/: main.rs
projects/minigrep/src/: main.rs
