[package]
name = "book"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "31"
path = "src/ch3/1_variables_and_mutability/bin/main.rs"

[[bin]]
name = "32"
path = "src/ch3/2_data_types/bin/main.rs"

[[bin]]
name = "33"
path = "src/ch3/3_functions/main.rs"

[[bin]]
name = "35"
path = "src/ch3/5_if_and_loops/main.rs"

[[bin]]
name = "3exer"
path = "src/ch3/exercise/main.rs"

[[bin]]
name = "41"
path = "src/ch4/1_ownership/main.rs"

[[bin]]
name = "42"
path = "src/ch4/2_references_and_borrowing/main.rs"

[[bin]]
name = "43"
path = "src/ch4/3_slice_type/main.rs"

[[bin]]
name = "51"
path = "src/ch5/1_structs/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
