[package]
name = "ch3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "31"
path = "src/1_variables_and_mutability/bin/main.rs"

[[bin]]
name = "32"
path = "src/2_data_types/bin/main.rs"

[[bin]]
name = "33"
path = "src/3_functions/main.rs"

[[bin]]
name = "35"
path = "src/5_if_and_loops/main.rs"

[[bin]]
name = "3exer"
path = "src/exercise/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
